--- a/TroTot_Admin/Pages/Shared/_Layout.cshtml
+++ b/TroTot_Admin/Pages/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="Posts/Index">Post</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Account/Index">Post</a>
                         </li>
                     </ul>
                 </div>
