--- a/TroTot_Admin/Pages/Account/Create.cshtml
+++ b/TroTot_Admin/Pages/Account/Create.cshtml
@@ -4,11 +4,53 @@
 @{
     ViewData["Title"] = "Create";
 }
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 
-<h1>Create</h1>
+<div class="signup-form">
+    <form action="/examples/actions/confirmation.php" method="post" class="form-horizontal">
+        <div class="row">
+            <div class="col-8 offset-4">
+                <h2>Create New User</h2>
+            </div>
+        </div>
+        <div class="form-group row">
+            <label asp-for="User.username" class="control-label col-form-label col-4"></label>
+            <div class="col-8">
+                <input asp-for="User.username" type="text" class="form-control" name="username"  />
+            </div>
+        </div>
+        <div class="form-group row">
+            <label asp-for="User.email" class="control-label col-form-label col-4"></label>
+            <div class="col-8">
+                <input asp-for="User.email" type="email" class="form-control" name="email"    />
+            </div>
+        </div>
+        <div class="form-group row">
+            <label asp-for="User.password" class="control-label col-form-label col-4"></label>
+            <div class="col-8">
+                <input asp-for="User.password" type="password" class="form-control" name="password"      />
+            </div>
+        </div>
+        <div class="form-group row">
+            <label class="control-label col-form-label col-4">Confirm Password</label>
+            <div class="col-8">
+                <input asp-for="User.email" type="password" class="form-control" name="confirm_password"/>
+            </div>
+        </div>
+        <div class="form-group row">
+            <div class="col-8 offset-4">
+                <button type="submit" class="btn btn-primary btn-lg">Create</button>
+            </div>
+        </div>
+    </form>
+    <div class="text-center">Already have an account? <a href="#">Login here</a></div>
+</div>
 
-<h4>User</h4>
-<hr />
+@*
 <div class="row">
     <div class="col-md-4">
         <form method="post">
@@ -62,8 +104,10 @@
 
 <div>
     <a asp-page="Index">Back to List</a>
-</div>
+</div>*@
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+    }
