--- a/TroTot_Admin/Pages/Account/Index.cshtml
+++ b/TroTot_Admin/Pages/Account/Index.cshtml
@@ -1,16 +1,86 @@
 ﻿@page
+@using System.Text
 @model TroTot_Admin.Pages.Account.IndexModel
 
 @{
     ViewData["Title"] = "Index";
 }
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 
-<h1>Index</h1>
+<div class="container-xl">
+    <div class="table-responsive">
+        <div class="table-wrapper">
+            <div class="table-title">
+                <div class="row">
+                    <div class="col-sm-5">
+                        <h2>User <b>Management</b></h2>
+                    </div>
+                    <div class="col-sm-7">
+                        <a asp-page="./Create" class="btn btn-secondary"><i class="material-icons">&#xE147;</i> <span>Add New User</span></a>
+                    </div>
+                </div>
+            </div>
+            <table class="table table-striped table-hover">
+                <thead>
+                    <tr>
+                        <th>@Html.DisplayNameFor(model => model.User[0].user_id)</th>
+                        <th>@Html.DisplayNameFor(model => model.User[0].username)</th>
+                        <th>@Html.DisplayNameFor(model => model.User[0].create_at)</th>
+                        <th>@Html.DisplayNameFor(model => model.User[0].role_id)</th>
+                        <th>@Html.DisplayNameFor(model => model.User[0].email)</th>
+                        <th>Action</th>
+                    </tr>
+                </thead>
+                @foreach (var item in Model.User)
+                {
+                    <tbody>
+                        <tr>
+                            <td>@Html.DisplayFor(modelItem => item.user_id)</td>
+                            <td><a asp-page="./Details" asp-route-id="@item.user_id"> @Html.DisplayFor(modelItem => item.username)</a></td>
+                            @*<td><a href="#">@Encoding.UTF8.GetString(Convert.From(item.avatar))</td>*@
+                            <td>@Convert.ToDateTime(item.create_at).ToString("dd/MM/yyyy")</td>
+                            <td>
+                                @if (item.role_id == 0)
+                                {
+                                    <p class="m-0">Admin</p>
+                                }
+                                else
+                                {
+                                    <p class="m-0">User</p>
+                                }
+                            </td>
+                            <td>@Html.DisplayFor(modelItem => item.email)</td>
+                            <td>
+                                <a asp-page="./Edit" asp-route-id="@item.user_id" class="settings" title="Settings" data-toggle="tooltip"><i class="material-icons">&#xE8B8;</i></a>
+                                <a asp-page="./Delete" asp-route-id="@item.user_id" class="delete" title="Delete" data-toggle="tooltip"><i class="material-icons">&#xE5C9;</i></a>
+                            </td>
+                        </tr>
+                    </tbody>
+                }
+            </table>
+            <div class="clearfix">
+                <div class="hint-text">Showing <b>5</b> out of <b>25</b> entries</div>
+                <ul class="pagination">
+                    <li class="page-item disabled"><a href="#">Previous</a></li>
+                    <li class="page-item"><a href="#" class="page-link">1</a></li>
+                    <li class="page-item"><a href="#" class="page-link">2</a></li>
+                    <li class="page-item active"><a href="#" class="page-link">3</a></li>
+                    <li class="page-item"><a href="#" class="page-link">4</a></li>
+                    <li class="page-item"><a href="#" class="page-link">5</a></li>
+                    <li class="page-item"><a href="#" class="page-link">Next</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
 
-<p>
-    <a asp-page="Create">Create New</a>
-</p>
-<table class="table">
+@*<table class="table">
     <thead>
         <tr>
             <th>
@@ -75,4 +145,4 @@
         </tr>
 }
     </tbody>
-</table>
+</table>*@
