--- a/TroTot_Admin/Pages/Account/Create.cshtml
+++ b/TroTot_Admin/Pages/Account/Create.cshtml
@@ -11,7 +11,8 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 
 <div class="signup-form">
-    <form action="/examples/actions/confirmation.php" method="post" class="form-horizontal">
+    <form method="post" class="form-horizontal">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="row">
             <div class="col-8 offset-4">
                 <h2>Create New User</h2>
@@ -20,91 +21,41 @@
         <div class="form-group row">
             <label asp-for="User.username" class="control-label col-form-label col-4"></label>
             <div class="col-8">
-                <input asp-for="User.username" type="text" class="form-control" name="username"  />
+                <input asp-for="User.username" type="text" class="form-control" name="username" />
+                @if (ViewData["Message"] != null && ViewData["Message"] == "Exist")
+                {
+                    <span style="color:red;">Username already exist.</span>
+                }
             </div>
         </div>
+        <span asp-validation-for="User.username" class="text-danger"></span>
+
         <div class="form-group row">
             <label asp-for="User.email" class="control-label col-form-label col-4"></label>
             <div class="col-8">
-                <input asp-for="User.email" type="email" class="form-control" name="email"    />
+                <input asp-for="User.email" type="email" class="form-control" name="email" />
             </div>
         </div>
         <div class="form-group row">
             <label asp-for="User.password" class="control-label col-form-label col-4"></label>
             <div class="col-8">
-                <input asp-for="User.password" type="password" class="form-control" name="password"      />
+                <input asp-for="User.password" type="password" class="form-control" name="password" />
             </div>
         </div>
-        <div class="form-group row">
-            <label class="control-label col-form-label col-4">Confirm Password</label>
-            <div class="col-8">
-                <input asp-for="User.email" type="password" class="form-control" name="confirm_password"/>
-            </div>
+        @*        <div class="form-group row">
+        <label class="control-label col-form-label col-4">Confirm Password</label>
+        <div class="col-8">
+        <input asp-for="User.email" type="password" class="form-control" name="confirm_password"/>
         </div>
+        </div>*@
         <div class="form-group row">
             <div class="col-8 offset-4">
-                <button type="submit" class="btn btn-primary btn-lg">Create</button>
+                <button type="submit" class="btn btn-secondary btn-lg">Create</button>
             </div>
         </div>
     </form>
-    <div class="text-center">Already have an account? <a href="#">Login here</a></div>
+    <div class="text-center "><a asp-page="Index" class="text-decoration-none">Back</a></div>
 </div>
-
-@*
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="User.username" class="control-label"></label>
-                <input asp-for="User.username" class="form-control" />
-                <span asp-validation-for="User.username" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="User.password" class="control-label"></label>
-                <input asp-for="User.password" class="form-control" />
-                <span asp-validation-for="User.password" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="User.email" class="control-label"></label>
-                <input asp-for="User.email" class="form-control" />
-                <span asp-validation-for="User.email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="User.phone_number" class="control-label"></label>
-                <input asp-for="User.phone_number" class="form-control" />
-                <span asp-validation-for="User.phone_number" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="User.full_name" class="control-label"></label>
-                <input asp-for="User.full_name" class="form-control" />
-                <span asp-validation-for="User.full_name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="User.create_at" class="control-label"></label>
-                <input asp-for="User.create_at" class="form-control" />
-                <span asp-validation-for="User.create_at" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="User.role_id" class="control-label"></label>
-                <input asp-for="User.role_id" class="form-control" />
-                <span asp-validation-for="User.role_id" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="User.avatar" class="control-label"></label>
-                <input asp-for="User.avatar" class="form-control" />
-                <span asp-validation-for="User.avatar" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>
-
-<div>
-    <a asp-page="Index">Back to List</a>
-</div>*@
 
 @section Scripts {
     @{
