--- a/TroTot_Admin/wwwroot/css/site.css
+++ b/TroTot_Admin/wwwroot/css/site.css
@@ -20,8 +20,8 @@ body {
 ///User manager
 
 body {
-    color: #566787;
-    background: #f5f5f5;
+    color: #f3f3f3;
+    background: #f3f3f3;
     font-family: 'Varela Round', sans-serif;
     font-size: 13px;
 }
@@ -215,7 +215,7 @@ table.table .avatar {
 
 //Create User
 body {
-    color: #999;
+    color: #f3f3f3;
     background: #f3f3f3;
     font-family: 'Roboto', sans-serif;
 }
@@ -245,7 +245,7 @@ body {
         margin: 0 0 30px 0;
         display: inline-block;
         padding: 0 30px 10px 0;
-        border-bottom: 3px solid #5cd3b4;
+        border-bottom: 3px solid #1c9fe2;
     }
 
     .signup-form form {
@@ -275,7 +275,7 @@ body {
     .signup-form .btn {
         font-size: 16px;
         font-weight: bold;
-        background: #5cd3b4;
+        background: #1c9fe2;
         border: none;
         margin-top: 20px;
         min-width: 140px;
