--- a/TroTot_Admin/Pages/Shared/_Layout.cshtml
+++ b/TroTot_Admin/Pages/Shared/_Layout.cshtml
@@ -1,11 +1,4 @@
-﻿
-@using Microsoft.AspNetCore.Http;
-@{
-    if(Context.Session.GetString("UserName")==null){
-        Context.Response.Redirect("/Login/Index");
-    }
-}
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -33,14 +26,6 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Account/Index">Post</a>
                         </li>
                     </ul>
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="" title="Manage">Hello @Context.Session.GetString("UserName")</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Login/Login">Log Out</a>
-                        </li>
-                     </ul>
                 </div>
             </div>
         </nav>
@@ -56,28 +41,6 @@
             &copy; 2022 - TroTot_Admin - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
-    <script type='text/javascript'>
-
-        // JavaScript anonymous function
-        (() => {
-            if (window.localStorage) {
-
-                // If there is no item as 'reload'
-                // in localstorage then create one &
-                // reload the page
-                if (!localStorage.getItem('reload')) {
-                    localStorage['reload'] = true;
-                    window.location.reload();
-                } else {
-
-                    // If there exists a 'reload' item
-                    // then clear the 'reload' item in
-                    // local storage
-                    localStorage.removeItem('reload');
-                }
-            }
-        })(); // Calling anonymous function here only
-    </script>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
