--- a/TroTot_Admin/Pages/Shared/_Layout.cshtml
+++ b/TroTot_Admin/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,11 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Http;
+@{
+    if (Context.Session.GetString("UserName") == null)
+    {
+        Context.Response.Redirect("/Login/Index");
+    }
+}
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -26,9 +33,36 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Account/Index">Account</a>
                         </li>
                     </ul>
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="" title="Manage">Hello @Context.Session.GetString("UserName")</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Login/Logout">Log Out</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </nav>
+        <script type='text/javascript'>
+            // JavaScript anonymous function
+            (() => {
+                if (window.localStorage) {
+                    // If there is no item as 'reload'
+                    // in localstorage then create one &
+                    // reload the page
+                    if (!localStorage.getItem('reload')) {
+                        localStorage['reload'] = true;
+                        window.location.reload();
+                    } else {
+                        // If there exists a 'reload' item
+                        // then clear the 'reload' item in
+                        // local storage
+                        localStorage.removeItem('reload');
+                    }
+                }
+            })(); // Calling anonymous function here only
+        </script>
     </header>
     <div class="container">
         <main role="main" class="pb-3">
